Fix column alignment problem

--- a/css/master.css
+++ b/css/master.css
@@ -121,14 +121,13 @@ footer .row {
 
 @media (min-width: 350px) {
   html { font-size: 15px; }
-  .col-1, .col-2, .col-3 { margin: 0 2.75rem !important; }
+  .col-1, .col-2, .col-3 { margin: 0 2.75rem; }
 }
 
 @media (min-width: 500px) {
   html { font-size: 16px; }
-  .col-1, .col-2, .col-3 { margin: 0 3rem !important; }
+  .col-1, .col-2, .col-3 { margin: 0 3rem; }
 }
-
 
 
 /* ================================================================== */
